Safe storage of api key

--- a/WebApplication1.csproj
+++ b/WebApplication1.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>2b745096-c17c-4bef-99dd-e2dcb98e142f</UserSecretsId>
   </PropertyGroup>
 
 </Project>
